--- a/style.css
+++ b/style.css
@@ -1,4 +1,12 @@
-body {background-color:tan;}
-h1{color:green;}
+body {background-color:black;font-family:arial;color:white}
+h1{color:grey;font-family:verdana}
+.maindiv {
+    background-color: white;
+    font-family:arial;color:black;
+    min-width: 150px;
+    padding: 20px;
+    border-radius: 25px;
+    justify-content: center;
+}
 
 
